apps/jellyfin/bluey/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - image: docker.io/jellyfin/jellyfin:20221123.13-unstable
        imagePullPolicy: IfNotPresent
        name: jellyfin
        resources:
          requests:
            memory: "512M"
            cpu: "1"
          limits:
            memory: "2G"
            cpu: "2"
        ports:
        - containerPort: 8096
          protocol: TCP
        volumeMounts:
        - mountPath: /data/media
          name: media
          readOnly: True
        - mountPath: /config
          name: jellyfin-config
      restartPolicy: Always
      volumes:
      - name: media
        nfs:
          server: 192.168.1.35
          path: /Media
        # persistentVolumeClaim:
        #   claimName: media
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config
